Finished author pages proj v1

--- a/levgrossman.html
+++ b/levgrossman.html
@@ -3,9 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Lev Grossman</title>
+    <style>
+      .external-link-icon img{
+        height:100px;
+      }
+      .center {
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        padding: 10px;
+        display: inline;
+        margin-inline-start: 10px;
+      }
+    </style>
   </head>
   <body>
+    <div class="center">
+      <a href="levgrossman.html"><h3>Lev Grossman</h3></a>
+      <a href="patrickrothfuss.html"><h3>Patrick Rothfuss</h3></a>
+      <a href="brandonsanderson.html"><h3>Brandon Sanderson</h3></a>
+      <a href="veschwab.html"><h3>V.E. Schwab</h3></a>
+      <a href="community.html"><h3>Community</h3></a>
+      <a href="sitemap.html"><h3>Sitemap</h3></a>
+      <a href="contact.html"><h3>Contact</h3></a>
+    </div>
     <h1>Lev Grossman</h1>
     <img src="images/lev-grossman-homepage.jpg" alt="Image of Lev Grossman" />
 
@@ -31,6 +53,33 @@
       molestiae iste repudiandae rem ea consequatur nisi a sit numquam dolores
       rerum consectetur vitae voluptatibus.
     </p>
+    <div class="external-link-icon">
+      <a href="https://www.facebook.com/levgrossman" target="_blank"
+      ><img
+      src="images/facebook.png" 
+      alt="Facebook Icon" 
+    /></a>
+    <a href="https://twitter.com/leverus?lang=en"target="_blank"
+      ><img
+      src="images/twitter3.png" 
+      alt="Twitter Icon" 
+    /></a>
+    <a href="https://www.instagram.com/levgrossman/?hl=en" target="_blank"
+      ><img
+      src="images/instagram.png" 
+      alt="instagram icon" 
+      >
+      <a href="http://levgrossman.com/" target="_blank"
+      ><img
+      src="images/authors-website.png" 
+      alt="authors website icon" 
+  >
+  <a href="http://levgrossman.com/blog/" target="_blank"
+      ><img
+      src="images/blog1.png" 
+      alt="blog icon" 
+      ></a>
+    </div>
 
     <h2>The Magicians</h2>
     <img src="images/themagicians.jpg" alt="Book Cover of The Magicians" />
@@ -64,35 +113,118 @@
       illum incidunt minus consectetur quaerat exercitationem voluptatum
       veritatis error ex adipisci deleniti, illo maiores voluptas.
     </p>
+<div class="external-link-icon">
+  <a href="https://www.goodreads.com/book/show/6101718-the-magicians" target="_blank"
+  ><img
+  src="images/good-reads.png" 
+  alt="Goodreads Icon" 
+/></a>
+<a href="https://www.amazon.com/Magicians-Novel-Lev-Grossman-ebook/dp/B002AU7MJU/ref=sr_1_2?crid=71DMAYTX1HK3&dchild=1&keywords=the+magicians&qid=1592163484&s=digital-text&sprefix=the+magic%2Cdigital-text%2C136&sr=1-2"target="_blank"
+  ><img
+  src="images/amazon3.png" 
+  alt="amazon icon" 
+/></a>
+<a href="http://levgrossman.com/books/the-magicians-a-novel/" target="_blank"
+  ><img
+  src="images/authors-website.png" 
+  alt="authors website icon" 
+  ></a>
+</div>
+<h2>The Magician King</h2>
+<img src="images/magicianking.jpg" alt="magician king bookcover">
+<h2>Synopsis</h2>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit molestiae
+      accusantium minus veniam assumenda impedit praesentium eaque, vitae, saepe
+      doloremque corporis recusandae! Voluptates qui, mollitia quo repellat et,
+      obcaecati consectetur, fugiat ex magni sapiente nihil numquam vitae
+      officiis hic. Ab nesciunt est quas et facere, quis aut maiores labore
+      excepturi mollitia. Vero libero incidunt culpa molestiae, sit harum
+      pariatur nostrum voluptatem obcaecati dolore expedita rerum reprehenderit
+      maxime, maiores provident, quos alias accusantium recusandae quod eveniet
+      commodi sequi perspiciatis! Aliquid quod fugit corrupti vel, excepturi cum
+      dolorum nulla ipsum temporibus! Reiciendis modi magni libero vel
+      consectetur, blanditiis ullam nesciunt sint. Libero!
+    </p>
 
-    <a href=""
-        ><img
-        class="external-link-icon" 
-        src="images/good-reads.png" 
-        alt="Goodreads Icon" 
+    <h2>Personal Review</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quaerat
+      explicabo commodi assumenda iure qui consequatur placeat enim eos dolores
+      doloribus, ad dolor quae quisquam laudantium maiores aperiam dolore harum
+      quas possimus, perferendis officia? Iusto, nihil similique cum tempore
+      accusamus, itaque, fugit unde incidunt mollitia sapiente soluta distinctio
+      obcaecati reiciendis. Ipsam eveniet rem totam animi adipisci quibusdam
+      inventore soluta perferendis officia, tempore expedita ad quas accusamus
+      quae aperiam modi nihil et nam veniam! Amet dolorum nostrum provident
+      pariatur? Similique magnam officiis voluptates delectus reprehenderit sunt
+      illum incidunt minus consectetur quaerat exercitationem voluptatum
+      veritatis error ex adipisci deleniti, illo maiores voluptas.
+    </p>
+    <div class="external-link-icon">
+      <a href="https://www.goodreads.com/book/show/10079321-the-magician-king" target="_blank"
+      ><img
+      src="images/good-reads.png" 
+      alt="Goodreads Icon" 
     /></a>
-    <a href=""
-        ><img
-        class="external-link-icon" 
-        src="images/good-reads.png" 
-        alt="Goodreads Icon" 
+    <a href="https://www.amazon.com/dp/B004XFZ8X2/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1"target="_blank"
+      ><img
+      src="images/amazon3.png" 
+      alt="amazon icon" 
     /></a>
-    <a href=""
-        ><img
-        class="external-link-icon" 
-        src="images/good-reads.png" 
-        alt="Goodreads Icon" 
-    /></a>
-    <a href=""
-        ><img
-        class="external-link-icon" 
-        src="images/good-reads.png" 
-        alt="Goodreads Icon" 
-    /></a>
+    <a href="http://levgrossman.com/books/the-magicians-a-novel/" target="_blank"
+      ><img
+      src="images/authors-website.png" 
+      alt="authors website icon" 
+      ></a>
+    </div>
+    <h2>The Magician's Land</h2>
+<img src="images/magiciansland.jpg" alt="magician king bookcover">
+<h2>Synopsis</h2>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit molestiae
+      accusantium minus veniam assumenda impedit praesentium eaque, vitae, saepe
+      doloremque corporis recusandae! Voluptates qui, mollitia quo repellat et,
+      obcaecati consectetur, fugiat ex magni sapiente nihil numquam vitae
+      officiis hic. Ab nesciunt est quas et facere, quis aut maiores labore
+      excepturi mollitia. Vero libero incidunt culpa molestiae, sit harum
+      pariatur nostrum voluptatem obcaecati dolore expedita rerum reprehenderit
+      maxime, maiores provident, quos alias accusantium recusandae quod eveniet
+      commodi sequi perspiciatis! Aliquid quod fugit corrupti vel, excepturi cum
+      dolorum nulla ipsum temporibus! Reiciendis modi magni libero vel
+      consectetur, blanditiis ullam nesciunt sint. Libero!
+    </p>
 
-    <img src="images/amazon3.png" alt="Amazon Icon" />
-    <img src="images/authors-website.png" alt= />
-    <img src="" alt="" />
-    <img src="" alt="" />
+    <h2>Personal Review</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quaerat
+      explicabo commodi assumenda iure qui consequatur placeat enim eos dolores
+      doloribus, ad dolor quae quisquam laudantium maiores aperiam dolore harum
+      quas possimus, perferendis officia? Iusto, nihil similique cum tempore
+      accusamus, itaque, fugit unde incidunt mollitia sapiente soluta distinctio
+      obcaecati reiciendis. Ipsam eveniet rem totam animi adipisci quibusdam
+      inventore soluta perferendis officia, tempore expedita ad quas accusamus
+      quae aperiam modi nihil et nam veniam! Amet dolorum nostrum provident
+      pariatur? Similique magnam officiis voluptates delectus reprehenderit sunt
+      illum incidunt minus consectetur quaerat exercitationem voluptatum
+      veritatis error ex adipisci deleniti, illo maiores voluptas.
+    </p>
+    <div class="external-link-icon">
+      <a href="https://www.goodreads.com/book/show/19103097-the-magician-s-land" target="_blank"
+      ><img
+      src="images/good-reads.png" 
+      alt="Goodreads Icon" 
+    /></a>
+    <a href="https://www.amazon.com/dp/B00K8EXJEM/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1"target="_blank"
+      ><img
+      src="images/amazon3.png" 
+      alt="amazon icon" 
+    /></a>
+    <a href="http://levgrossman.com/books/the-magicians-a-novel/" target="_blank"
+      ><img
+      src="images/authors-website.png" 
+      alt="authors website icon" 
+      ></a>
+    </div>
   </body>
 </html>
