--- a/patrickrothfuss.html
+++ b/patrickrothfuss.html
@@ -1,11 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Patrick Rothfuss</title>
+    <style>
+      .external-link-icon img{
+        height:100px;
+      }
+      #patrick{
+          height:400px;
+      }
+      #wise-man{
+          height: 450px;
+      }
+      #doors-stone{
+          height:450px;
+      }
+      .center {
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        padding: 10px;
+        display: inline;
+        margin-inline-start: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="center">
+        <a href="levgrossman.html"><h3>Lev Grossman</h3></a>
+        <a href="patrickrothfuss.html"><h3>Patrick Rothfuss</h3></a>
+        <a href="brandonsanderson.html"><h3>Brandon Sanderson</h3></a>
+        <a href="veschwab.html"><h3>V.E. Schwab</h3></a>
+        <a href="community.html"><h3>Community</h3></a>
+        <a href="sitemap.html"><h3>Sitemap</h3></a>
+        <a href="contact.html"><h3>Contact</h3></a>
+      </div>
     <h1>Patrick Rothfuss</h1>
-</body>
+    <img id="patrick"src="images/patrick-rothfuss-homepage.jpg" alt="Image of Patrick Rothfuss" />
+
+    <h2>Biography</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure minima sunt
+      nostrum rerum mollitia nemo, incidunt est aperiam praesentium voluptatem
+      nulla labore. Rem asperiores ratione adipisci magni commodi itaque
+      excepturi modi voluptas explicabo error ipsum, quo nesciunt. Iste amet
+      rerum veritatis deleniti nemo odio itaque asperiores eveniet. Asperiores,
+      maiores. Voluptates perspiciatis incidunt ipsa iste recusandae omnis
+      itaque praesentium. Aperiam at iusto quasi aliquam est incidunt aut,
+      explicabo, odit ullam, ipsam tenetur sunt modi dolorum eaque
+      necessitatibus recusandae rem! Neque iusto aspernatur nisi iste odit
+      aliquid numquam cumque nesciunt animi deleniti quaerat consequuntur
+      consectetur, beatae asperiores obcaecati quidem saepe rem corrupti at
+      dolores quae exercitationem, libero excepturi. Veritatis officiis dolores
+      dolorem laboriosam distinctio asperiores omnis, aliquid ex. Vel architecto
+      molestias tempore animi consequuntur necessitatibus accusantium, dolor
+      debitis esse, similique labore praesentium reprehenderit, dicta autem
+      vero! Doloremque facilis commodi quo, fuga voluptates mollitia repudiandae
+      culpa labore incidunt qui consequuntur ipsam? Sint at esse, voluptas
+      molestiae iste repudiandae rem ea consequatur nisi a sit numquam dolores
+      rerum consectetur vitae voluptatibus.
+    </p>
+    <div class="external-link-icon">
+      <a href="https://www.facebook.com/Patrick.Rothfuss/" target="_blank"
+      ><img
+      src="images/facebook.png" 
+      alt="Facebook Icon" 
+    /></a>
+    <a href="https://twitter.com/patrickrothfuss?lang=en"target="_blank"
+      ><img
+      src="images/twitter3.png" 
+      alt="Twitter Icon" 
+    /></a>
+    <a href="https://www.instagram.com/patrickrothfuss/?hl=en" target="_blank"
+      ><img
+      src="images/instagram.png" 
+      alt="instagram icon" 
+      >
+      <a href="https://www.patrickrothfuss.com/content/index.asp" target="_blank"
+      ><img
+      src="images/authors-website.png" 
+      alt="authors website icon" 
+  >
+  <a href="https://blog.patrickrothfuss.com/" target="_blank"
+      ><img
+      src="images/blog1.png" 
+      alt="blog icon" 
+      ></a>
+    </div>
+
+    <h2>The Name of the Wind</h2>
+    <img src="images/name-of-the-wind-bookcover.jpg" alt="Book Cover of The Name of the Wind" />
+
+    <h2>Synopsis</h2>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit molestiae
+      accusantium minus veniam assumenda impedit praesentium eaque, vitae, saepe
+      doloremque corporis recusandae! Voluptates qui, mollitia quo repellat et,
+      obcaecati consectetur, fugiat ex magni sapiente nihil numquam vitae
+      officiis hic. Ab nesciunt est quas et facere, quis aut maiores labore
+      excepturi mollitia. Vero libero incidunt culpa molestiae, sit harum
+      pariatur nostrum voluptatem obcaecati dolore expedita rerum reprehenderit
+      maxime, maiores provident, quos alias accusantium recusandae quod eveniet
+      commodi sequi perspiciatis! Aliquid quod fugit corrupti vel, excepturi cum
+      dolorum nulla ipsum temporibus! Reiciendis modi magni libero vel
+      consectetur, blanditiis ullam nesciunt sint. Libero!
+    </p>
+
+    <h2>Personal Review</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quaerat
+      explicabo commodi assumenda iure qui consequatur placeat enim eos dolores
+      doloribus, ad dolor quae quisquam laudantium maiores aperiam dolore harum
+      quas possimus, perferendis officia? Iusto, nihil similique cum tempore
+      accusamus, itaque, fugit unde incidunt mollitia sapiente soluta distinctio
+      obcaecati reiciendis. Ipsam eveniet rem totam animi adipisci quibusdam
+      inventore soluta perferendis officia, tempore expedita ad quas accusamus
+      quae aperiam modi nihil et nam veniam! Amet dolorum nostrum provident
+      pariatur? Similique magnam officiis voluptates delectus reprehenderit sunt
+      illum incidunt minus consectetur quaerat exercitationem voluptatum
+      veritatis error ex adipisci deleniti, illo maiores voluptas.
+    </p>
+<div class="external-link-icon">
+  <a href="https://www.goodreads.com/book/show/186074.The_Name_of_the_Wind" target="_blank"
+  ><img
+  src="images/good-reads.png" 
+  alt="Goodreads Icon" 
+/></a>
+<a href="https://www.amazon.com/gp/product/075640407X/ref=x_gr_w_bb_glide_sout?ie=UTF8&tag=x_gr_w_bb_glide_sout-20&linkCode=as2&camp=1789&creative=9325&creativeASIN=075640407X&SubscriptionId=1MGPYB6YW3HWK55XCGG2"target="_blank"
+  ><img
+  src="images/amazon3.png" 
+  alt="amazon icon" 
+/></a>
+<a href="https://www.patrickrothfuss.com/content/books.asp" target="_blank"
+  ><img
+  src="images/authors-website.png" 
+  alt="authors website icon" 
+  ></a>
+</div>
+<h2>The Wise Man's Fear</h2>
+<img id="wise-man" src="images/wise-man's-fear-bookcover.jpg" alt="Wise Man's Fear bookcover">
+<h2>Synopsis</h2>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit molestiae
+      accusantium minus veniam assumenda impedit praesentium eaque, vitae, saepe
+      doloremque corporis recusandae! Voluptates qui, mollitia quo repellat et,
+      obcaecati consectetur, fugiat ex magni sapiente nihil numquam vitae
+      officiis hic. Ab nesciunt est quas et facere, quis aut maiores labore
+      excepturi mollitia. Vero libero incidunt culpa molestiae, sit harum
+      pariatur nostrum voluptatem obcaecati dolore expedita rerum reprehenderit
+      maxime, maiores provident, quos alias accusantium recusandae quod eveniet
+      commodi sequi perspiciatis! Aliquid quod fugit corrupti vel, excepturi cum
+      dolorum nulla ipsum temporibus! Reiciendis modi magni libero vel
+      consectetur, blanditiis ullam nesciunt sint. Libero!
+    </p>
+
+    <h2>Personal Review</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quaerat
+      explicabo commodi assumenda iure qui consequatur placeat enim eos dolores
+      doloribus, ad dolor quae quisquam laudantium maiores aperiam dolore harum
+      quas possimus, perferendis officia? Iusto, nihil similique cum tempore
+      accusamus, itaque, fugit unde incidunt mollitia sapiente soluta distinctio
+      obcaecati reiciendis. Ipsam eveniet rem totam animi adipisci quibusdam
+      inventore soluta perferendis officia, tempore expedita ad quas accusamus
+      quae aperiam modi nihil et nam veniam! Amet dolorum nostrum provident
+      pariatur? Similique magnam officiis voluptates delectus reprehenderit sunt
+      illum incidunt minus consectetur quaerat exercitationem voluptatum
+      veritatis error ex adipisci deleniti, illo maiores voluptas.
+    </p>
+    <div class="external-link-icon">
+      <a href="https://www.goodreads.com/book/show/1215032.The_Wise_Man_s_Fear" target="_blank"
+      ><img
+      src="images/good-reads.png" 
+      alt="Goodreads Icon" 
+    /></a>
+    <a href="https://www.amazon.com/gp/product/0756404738/ref=x_gr_w_bb_glide_sout?ie=UTF8&tag=x_gr_w_bb_glide_sout-20&linkCode=as2&camp=1789&creative=9325&creativeASIN=0756404738&SubscriptionId=1MGPYB6YW3HWK55XCGG2"target="_blank"
+      ><img
+      src="images/amazon3.png" 
+      alt="amazon icon" 
+    /></a>
+    <a href="https://www.patrickrothfuss.com/content/books.asp" target="_blank"
+      ><img
+      src="images/authors-website.png" 
+      alt="authors website icon" 
+      ></a>
+    </div>
+    <h2>The Doors of Stone</h2>
+<img id="doors-stone" src="images/doors-of-stone-bookcover.jpg" alt="Doors of Stone bookcover">
+<h2>Synopsis</h2>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit molestiae
+      accusantium minus veniam assumenda impedit praesentium eaque, vitae, saepe
+      doloremque corporis recusandae! Voluptates qui, mollitia quo repellat et,
+      obcaecati consectetur, fugiat ex magni sapiente nihil numquam vitae
+      officiis hic. Ab nesciunt est quas et facere, quis aut maiores labore
+      excepturi mollitia. Vero libero incidunt culpa molestiae, sit harum
+      pariatur nostrum voluptatem obcaecati dolore expedita rerum reprehenderit
+      maxime, maiores provident, quos alias accusantium recusandae quod eveniet
+      commodi sequi perspiciatis! Aliquid quod fugit corrupti vel, excepturi cum
+      dolorum nulla ipsum temporibus! Reiciendis modi magni libero vel
+      consectetur, blanditiis ullam nesciunt sint. Libero!
+    </p>
+
+    <h2>Personal Review</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quaerat
+      explicabo commodi assumenda iure qui consequatur placeat enim eos dolores
+      doloribus, ad dolor quae quisquam laudantium maiores aperiam dolore harum
+      quas possimus, perferendis officia? Iusto, nihil similique cum tempore
+      accusamus, itaque, fugit unde incidunt mollitia sapiente soluta distinctio
+      obcaecati reiciendis. Ipsam eveniet rem totam animi adipisci quibusdam
+      inventore soluta perferendis officia, tempore expedita ad quas accusamus
+      quae aperiam modi nihil et nam veniam! Amet dolorum nostrum provident
+      pariatur? Similique magnam officiis voluptates delectus reprehenderit sunt
+      illum incidunt minus consectetur quaerat exercitationem voluptatum
+      veritatis error ex adipisci deleniti, illo maiores voluptas.
+    </p>
+    <div class="external-link-icon">
+      <a href="https://www.goodreads.com/book/show/21032488-doors-of-stone?from_search=true&from_srp=true&qid=Mr0vr3woeo&rank=1" target="_blank"
+      ><img
+      src="images/good-reads.png" 
+      alt="Goodreads Icon" 
+    /></a>
+    </div>
+  </body>
 </html>
