--- a/veschwab.html
+++ b/veschwab.html
@@ -1,11 +1,326 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>V.E Schwab</title>
+    <style>
+      .external-link-icon img{
+        height:100px;
+      }
+      .center {
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        padding: 10px;
+        display: inline;
+        margin-inline-start: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="center">
+        <a href="levgrossman.html"><h3>Lev Grossman</h3></a>
+        <a href="patrickrothfuss.html"><h3>Patrick Rothfuss</h3></a>
+        <a href="brandonsanderson.html"><h3>Brandon Sanderson</h3></a>
+        <a href="veschwab.html"><h3>V.E. Schwab</h3></a>
+        <a href="community.html"><h3>Community</h3></a>
+        <a href="sitemap.html"><h3>Sitemap</h3></a>
+        <a href="contact.html"><h3>Contact</h3></a>
+      </div>
     <h1>V.E. Schwab</h1>
-</body>
+    <img src="images/ve-schwab.jpg" alt="Image of V.E Schwab" />
+
+    <h2>Biography</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure minima sunt
+      nostrum rerum mollitia nemo, incidunt est aperiam praesentium voluptatem
+      nulla labore. Rem asperiores ratione adipisci magni commodi itaque
+      excepturi modi voluptas explicabo error ipsum, quo nesciunt. Iste amet
+      rerum veritatis deleniti nemo odio itaque asperiores eveniet. Asperiores,
+      maiores. Voluptates perspiciatis incidunt ipsa iste recusandae omnis
+      itaque praesentium. Aperiam at iusto quasi aliquam est incidunt aut,
+      explicabo, odit ullam, ipsam tenetur sunt modi dolorum eaque
+      necessitatibus recusandae rem! Neque iusto aspernatur nisi iste odit
+      aliquid numquam cumque nesciunt animi deleniti quaerat consequuntur
+      consectetur, beatae asperiores obcaecati quidem saepe rem corrupti at
+      dolores quae exercitationem, libero excepturi. Veritatis officiis dolores
+      dolorem laboriosam distinctio asperiores omnis, aliquid ex. Vel architecto
+      molestias tempore animi consequuntur necessitatibus accusantium, dolor
+      debitis esse, similique labore praesentium reprehenderit, dicta autem
+      vero! Doloremque facilis commodi quo, fuga voluptates mollitia repudiandae
+      culpa labore incidunt qui consequuntur ipsam? Sint at esse, voluptas
+      molestiae iste repudiandae rem ea consequatur nisi a sit numquam dolores
+      rerum consectetur vitae voluptatibus.
+    </p>
+    <div class="external-link-icon">
+      <a href="https://www.facebook.com/Victoria-VE-Schwab-348539958600479/" target="_blank"
+      ><img
+      src="images/facebook.png" 
+      alt="Facebook Icon" 
+    /></a>
+    <a href="https://twitter.com/veschwab?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"target="_blank"
+      ><img
+      src="images/twitter3.png" 
+      alt="Twitter Icon" 
+    /></a>
+    <a href="https://www.instagram.com/veschwab/?hl=en" target="_blank"
+      ><img
+      src="images/instagram.png" 
+      alt="instagram icon" 
+      >
+      <a href="https://www.veschwab.com/" target="_blank"
+      ><img
+      src="images/authors-website.png" 
+      alt="authors website icon" 
+  >
+  <a href="https://veschwab.wordpress.com/" target="_blank"
+      ><img
+      src="images/blog1.png" 
+      alt="blog icon" 
+      ></a>
+    </div>
+
+    <h2>A Darker Shade of Magic (Shades of Magic, #1)</h2>
+    <img src="images/darker-shade-of-magic.jpg" alt="Book Cover of The Magicians" />
+
+    <h2>Synopsis</h2>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit molestiae
+      accusantium minus veniam assumenda impedit praesentium eaque, vitae, saepe
+      doloremque corporis recusandae! Voluptates qui, mollitia quo repellat et,
+      obcaecati consectetur, fugiat ex magni sapiente nihil numquam vitae
+      officiis hic. Ab nesciunt est quas et facere, quis aut maiores labore
+      excepturi mollitia. Vero libero incidunt culpa molestiae, sit harum
+      pariatur nostrum voluptatem obcaecati dolore expedita rerum reprehenderit
+      maxime, maiores provident, quos alias accusantium recusandae quod eveniet
+      commodi sequi perspiciatis! Aliquid quod fugit corrupti vel, excepturi cum
+      dolorum nulla ipsum temporibus! Reiciendis modi magni libero vel
+      consectetur, blanditiis ullam nesciunt sint. Libero!
+    </p>
+
+    <h2>Personal Review</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quaerat
+      explicabo commodi assumenda iure qui consequatur placeat enim eos dolores
+      doloribus, ad dolor quae quisquam laudantium maiores aperiam dolore harum
+      quas possimus, perferendis officia? Iusto, nihil similique cum tempore
+      accusamus, itaque, fugit unde incidunt mollitia sapiente soluta distinctio
+      obcaecati reiciendis. Ipsam eveniet rem totam animi adipisci quibusdam
+      inventore soluta perferendis officia, tempore expedita ad quas accusamus
+      quae aperiam modi nihil et nam veniam! Amet dolorum nostrum provident
+      pariatur? Similique magnam officiis voluptates delectus reprehenderit sunt
+      illum incidunt minus consectetur quaerat exercitationem voluptatum
+      veritatis error ex adipisci deleniti, illo maiores voluptas.
+    </p>
+<div class="external-link-icon">
+  <a href="https://www.goodreads.com/book/show/22055262-a-darker-shade-of-magic" target="_blank"
+  ><img
+  src="images/good-reads.png" 
+  alt="Goodreads Icon" 
+/></a>
+<a href="https://www.amazon.com/gp/product/0765376458/ref=x_gr_w_bb_sout?ie=UTF8&tag=x_gr_w_bb_sout-20&linkCode=as2&camp=1789&creative=9325&creativeASIN=0765376458&SubscriptionId=1MGPYB6YW3HWK55XCGG2"target="_blank"
+  ><img
+  src="images/amazon3.png" 
+  alt="amazon icon" 
+/></a>
+<a href="https://www.veschwab.com/adult/" target="_blank"
+  ><img
+  src="images/authors-website.png" 
+  alt="authors website icon" 
+  ></a>
+</div>
+<h2>A Gathering of Shadows (Shades of Magic, #2)</h2>
+<img src="images/gathering-of-shadows.jpg" alt="magician king bookcover">
+<h2>Synopsis</h2>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit molestiae
+      accusantium minus veniam assumenda impedit praesentium eaque, vitae, saepe
+      doloremque corporis recusandae! Voluptates qui, mollitia quo repellat et,
+      obcaecati consectetur, fugiat ex magni sapiente nihil numquam vitae
+      officiis hic. Ab nesciunt est quas et facere, quis aut maiores labore
+      excepturi mollitia. Vero libero incidunt culpa molestiae, sit harum
+      pariatur nostrum voluptatem obcaecati dolore expedita rerum reprehenderit
+      maxime, maiores provident, quos alias accusantium recusandae quod eveniet
+      commodi sequi perspiciatis! Aliquid quod fugit corrupti vel, excepturi cum
+      dolorum nulla ipsum temporibus! Reiciendis modi magni libero vel
+      consectetur, blanditiis ullam nesciunt sint. Libero!
+    </p>
+
+    <h2>Personal Review</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quaerat
+      explicabo commodi assumenda iure qui consequatur placeat enim eos dolores
+      doloribus, ad dolor quae quisquam laudantium maiores aperiam dolore harum
+      quas possimus, perferendis officia? Iusto, nihil similique cum tempore
+      accusamus, itaque, fugit unde incidunt mollitia sapiente soluta distinctio
+      obcaecati reiciendis. Ipsam eveniet rem totam animi adipisci quibusdam
+      inventore soluta perferendis officia, tempore expedita ad quas accusamus
+      quae aperiam modi nihil et nam veniam! Amet dolorum nostrum provident
+      pariatur? Similique magnam officiis voluptates delectus reprehenderit sunt
+      illum incidunt minus consectetur quaerat exercitationem voluptatum
+      veritatis error ex adipisci deleniti, illo maiores voluptas.
+    </p>
+    <div class="external-link-icon">
+      <a href="https://www.goodreads.com/book/show/20764879-a-gathering-of-shadows" target="_blank"
+      ><img
+      src="images/good-reads.png" 
+      alt="Goodreads Icon" 
+    /></a>
+    <a href="https://www.amazon.com/gp/product/0765376474/ref=x_gr_w_bb_sout?ie=UTF8&tag=x_gr_w_bb_sout-20&linkCode=as2&camp=1789&creative=9325&creativeASIN=0765376474&SubscriptionId=1MGPYB6YW3HWK55XCGG2"target="_blank"
+      ><img
+      src="images/amazon3.png" 
+      alt="amazon icon" 
+    /></a>
+    <a href="https://www.veschwab.com/adult/" target="_blank"
+      ><img
+      src="images/authors-website.png" 
+      alt="authors website icon" 
+      ></a>
+    </div>
+    <h2>A Conjuring of Light (Shades of Magic, #3)</h2>
+<img src="images/conjuring-of-light.jpg" alt="magician king bookcover">
+<h2>Synopsis</h2>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit molestiae
+      accusantium minus veniam assumenda impedit praesentium eaque, vitae, saepe
+      doloremque corporis recusandae! Voluptates qui, mollitia quo repellat et,
+      obcaecati consectetur, fugiat ex magni sapiente nihil numquam vitae
+      officiis hic. Ab nesciunt est quas et facere, quis aut maiores labore
+      excepturi mollitia. Vero libero incidunt culpa molestiae, sit harum
+      pariatur nostrum voluptatem obcaecati dolore expedita rerum reprehenderit
+      maxime, maiores provident, quos alias accusantium recusandae quod eveniet
+      commodi sequi perspiciatis! Aliquid quod fugit corrupti vel, excepturi cum
+      dolorum nulla ipsum temporibus! Reiciendis modi magni libero vel
+      consectetur, blanditiis ullam nesciunt sint. Libero!
+    </p>
+
+    <h2>Personal Review</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quaerat
+      explicabo commodi assumenda iure qui consequatur placeat enim eos dolores
+      doloribus, ad dolor quae quisquam laudantium maiores aperiam dolore harum
+      quas possimus, perferendis officia? Iusto, nihil similique cum tempore
+      accusamus, itaque, fugit unde incidunt mollitia sapiente soluta distinctio
+      obcaecati reiciendis. Ipsam eveniet rem totam animi adipisci quibusdam
+      inventore soluta perferendis officia, tempore expedita ad quas accusamus
+      quae aperiam modi nihil et nam veniam! Amet dolorum nostrum provident
+      pariatur? Similique magnam officiis voluptates delectus reprehenderit sunt
+      illum incidunt minus consectetur quaerat exercitationem voluptatum
+      veritatis error ex adipisci deleniti, illo maiores voluptas.
+    </p>
+    <div class="external-link-icon">
+      <a href="https://www.goodreads.com/book/show/29939230-a-conjuring-of-light" target="_blank"
+      ><img
+      src="images/good-reads.png" 
+      alt="Goodreads Icon" 
+    /></a>
+    <a href="https://www.amazon.com/gp/product/0765387468/ref=x_gr_w_bb_glide_sout?ie=UTF8&tag=x_gr_w_bb_glide_sout-20&linkCode=as2&camp=1789&creative=9325&creativeASIN=0765387468&SubscriptionId=1MGPYB6YW3HWK55XCGG2"target="_blank"
+      ><img
+      src="images/amazon3.png" 
+      alt="amazon icon" 
+    /></a>
+    <a href="https://www.veschwab.com/adult/" target="_blank"
+      ><img
+      src="images/authors-website.png" 
+      alt="authors website icon" 
+      ></a>
+    </div>
+    <h2>Vicious (Villians, #1)</h2>
+    <img src="images/vicious.jpg" alt="magician king bookcover">
+    <h2>Synopsis</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit molestiae
+          accusantium minus veniam assumenda impedit praesentium eaque, vitae, saepe
+          doloremque corporis recusandae! Voluptates qui, mollitia quo repellat et,
+          obcaecati consectetur, fugiat ex magni sapiente nihil numquam vitae
+          officiis hic. Ab nesciunt est quas et facere, quis aut maiores labore
+          excepturi mollitia. Vero libero incidunt culpa molestiae, sit harum
+          pariatur nostrum voluptatem obcaecati dolore expedita rerum reprehenderit
+          maxime, maiores provident, quos alias accusantium recusandae quod eveniet
+          commodi sequi perspiciatis! Aliquid quod fugit corrupti vel, excepturi cum
+          dolorum nulla ipsum temporibus! Reiciendis modi magni libero vel
+          consectetur, blanditiis ullam nesciunt sint. Libero!
+        </p>
+    
+        <h2>Personal Review</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quaerat
+          explicabo commodi assumenda iure qui consequatur placeat enim eos dolores
+          doloribus, ad dolor quae quisquam laudantium maiores aperiam dolore harum
+          quas possimus, perferendis officia? Iusto, nihil similique cum tempore
+          accusamus, itaque, fugit unde incidunt mollitia sapiente soluta distinctio
+          obcaecati reiciendis. Ipsam eveniet rem totam animi adipisci quibusdam
+          inventore soluta perferendis officia, tempore expedita ad quas accusamus
+          quae aperiam modi nihil et nam veniam! Amet dolorum nostrum provident
+          pariatur? Similique magnam officiis voluptates delectus reprehenderit sunt
+          illum incidunt minus consectetur quaerat exercitationem voluptatum
+          veritatis error ex adipisci deleniti, illo maiores voluptas.
+        </p>
+        <div class="external-link-icon">
+          <a href="https://www.goodreads.com/book/show/40874032-vicious" target="_blank"
+          ><img
+          src="images/good-reads.png" 
+          alt="Goodreads Icon" 
+        /></a>
+        <a href="https://www.amazon.com/gp/product/B00CQY7WBI/ref=x_gr_w_bb_sout?ie=UTF8&tag=x_gr_w_bb_sout-20&linkCode=as2&camp=1789&creative=9325&creativeASIN=B00CQY7WBI&SubscriptionId=1MGPYB6YW3HWK55XCGG2"target="_blank"
+          ><img
+          src="images/amazon3.png" 
+          alt="amazon icon" 
+        /></a>
+        <a href="https://www.veschwab.com/adult/" target="_blank"
+          ><img
+          src="images/authors-website.png" 
+          alt="authors website icon" 
+          ></a>
+        </div>
+        <h2>Vengeful (Villains, #2)</h2>
+        <img src="images/vengeful.jpg" alt="magician king bookcover">
+        <h2>Synopsis</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit molestiae
+              accusantium minus veniam assumenda impedit praesentium eaque, vitae, saepe
+              doloremque corporis recusandae! Voluptates qui, mollitia quo repellat et,
+              obcaecati consectetur, fugiat ex magni sapiente nihil numquam vitae
+              officiis hic. Ab nesciunt est quas et facere, quis aut maiores labore
+              excepturi mollitia. Vero libero incidunt culpa molestiae, sit harum
+              pariatur nostrum voluptatem obcaecati dolore expedita rerum reprehenderit
+              maxime, maiores provident, quos alias accusantium recusandae quod eveniet
+              commodi sequi perspiciatis! Aliquid quod fugit corrupti vel, excepturi cum
+              dolorum nulla ipsum temporibus! Reiciendis modi magni libero vel
+              consectetur, blanditiis ullam nesciunt sint. Libero!
+            </p>
+        
+            <h2>Personal Review</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quaerat
+              explicabo commodi assumenda iure qui consequatur placeat enim eos dolores
+              doloribus, ad dolor quae quisquam laudantium maiores aperiam dolore harum
+              quas possimus, perferendis officia? Iusto, nihil similique cum tempore
+              accusamus, itaque, fugit unde incidunt mollitia sapiente soluta distinctio
+              obcaecati reiciendis. Ipsam eveniet rem totam animi adipisci quibusdam
+              inventore soluta perferendis officia, tempore expedita ad quas accusamus
+              quae aperiam modi nihil et nam veniam! Amet dolorum nostrum provident
+              pariatur? Similique magnam officiis voluptates delectus reprehenderit sunt
+              illum incidunt minus consectetur quaerat exercitationem voluptatum
+              veritatis error ex adipisci deleniti, illo maiores voluptas.
+            </p>
+            <div class="external-link-icon">
+              <a href="https://www.goodreads.com/book/show/26856502-vengeful" target="_blank"
+              ><img
+              src="images/good-reads.png" 
+              alt="Goodreads Icon" 
+            /></a>
+            <a href="https://www.amazon.com/gp/product/B078X26SH3/ref=x_gr_w_bb_glide_sout?ie=UTF8&tag=x_gr_w_bb_glide_sout-20&linkCode=as2&camp=1789&creative=9325&creativeASIN=B078X26SH3&SubscriptionId=1MGPYB6YW3HWK55XCGG2"target="_blank"
+              ><img
+              src="images/amazon3.png" 
+              alt="amazon icon" 
+            /></a>
+            <a href="https://www.veschwab.com/adult/" target="_blank"
+              ><img
+              src="images/authors-website.png" 
+              alt="authors website icon" 
+              ></a>
+            </div>
+  </body>
 </html>
