--- a/veschwab.html
+++ b/veschwab.html
@@ -24,6 +24,10 @@
       .italic img{
           height:50px;
       }
+      a{
+        color:black;
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
@@ -35,7 +39,6 @@
         <a href="patrickrothfuss.html"><h3>Patrick Rothfuss</h3></a>
         <a href="brandonsanderson.html"><h3>Brandon Sanderson</h3></a>
         <a href="veschwab.html"><h3>V.E. Schwab</h3></a>
-        <a href="community.html"><h3>Community</h3></a>
         <a href="sitemap.html"><h3>Sitemap</h3></a>
         <a href="contact.html"><h3>Contact</h3></a>
       </div>
