fixed site map spacing

--- a/sitemap.html
+++ b/sitemap.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sitemap</title>
+    <title>site map</title>
     <style>
         .center {
         margin-left: auto;
@@ -68,7 +68,7 @@
         <a href="sitemap.html"><h3>Sitemap</h3></a>
         <a href="contact.html"><h3>Contact</h3></a>
       </div>
-    <h1>Sitemap</h1>
+    <h1>Site Map</h1>
     <div class="middle">
         <div class="author" class="sanderson">
             <ul><span class="name">Brandon Sanderson</span></a>
