--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       .italic img{
         height:50px;
       }
+      a{
+        color:black;
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
