--- a/sitemap.html
+++ b/sitemap.html
@@ -51,6 +51,9 @@
         .author{
             display: inline-block;
         }
+        p{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
