--- a/levgrossman.html
+++ b/levgrossman.html
@@ -371,10 +371,10 @@ function more(){
      b.innerHTML = "more"
    }
    
-if(h4.valueOf === "more"){
+if(h4.value == "more"){
    document.getElementById("button").onclick = more;
 }
-if(h4.valueOf ==="less"){
+if(h4.value == "less"){
   document.getElementById("button").onclick = less;
 }
    
