--- a/sitemap.html
+++ b/sitemap.html
@@ -246,7 +246,7 @@
 
 const sword = document.getElementById("sword");
 
-
+let left = 50
 function move(){
 let left = sword.style.left;
   left = left + 20;
